[package]
name = "substrate-offchain-demo"
version = "2.0.0"
authors = ["Alfredo Di Napoli"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "substrate-offchain-demo"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate.git"
package = "sr-io"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.substrate-cli]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-cli"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-primitives"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.substrate-executor]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-executor"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.substrate-service]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-service"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-inherents"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.transaction-pool]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-transaction-pool"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.network]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-network"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.babe]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-consensus-babe"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.babe-primitives]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-consensus-babe-primitives"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-finality-grandpa"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-finality-grandpa-primitives"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.substrate-client]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-client"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.basic-authorship]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-basic-authorship"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.runtime]
path = "runtime"

[build-dependencies]
vergen = "3"
