[package]
name = "runtime"
version = "2.0.0"
authors = ["Alfredo Di Napoli"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sr-primitives"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"
default-features = false

[dependencies.substrate-session]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-session"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"
default-features = false

[dependencies.balances]
git = "https://github.com/paritytech/substrate.git"
package = "srml-balances"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"
default-features = false

[dependencies.babe]
git = "https://github.com/paritytech/substrate.git"
package = "srml-babe"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"
default-features = false

[dependencies.babe-primitives]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-consensus-babe-primitives"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"
default-features = false

[dependencies.client]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-client"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"
default-features = false

[dependencies.executive]
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"
package = "srml-executive"
default-features = false

[dependencies.rstd]
package = "sr-std"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.runtime-io]
package = "sr-io"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.version]
package = "sr-version"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.support]
package = "srml-support"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.primitives]
package = "substrate-primitives"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.indices]
package = "srml-indices"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.grandpa]
package = "srml-grandpa"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.system]
package = "srml-system"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.timestamp]
package = "srml-timestamp"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.sudo]
package = "srml-sudo"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[dependencies.offchain-primitives]
package = "substrate-offchain-primitives"
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "094cca7b7726ef407cd82e65efe4ab42fff33801"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
]
